--- a/html/examples/spring/requestbody.html
+++ b/html/examples/spring/requestbody.html
@@ -25,7 +25,7 @@
 			$.ajax({
 				type : 'POST',
 				url : '/guava/requestBodyExample/handlePost',
-				contentType : 'application/json1; charset=UTF-8',
+				contentType : 'application/json; charset=UTF-8',
 				cache : false,
 				data : JSON.stringify(human),// 需要导入json2.js
 				context : $("#theSecondSpan"),
