--- a/html/examples/spring/httpentity.html
+++ b/html/examples/spring/httpentity.html
@@ -2,16 +2,16 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>@ResponseBody</title>
+<title>HttpEntity</title>
 <script type="text/javascript" src="../../commons/js/jquery-1.11.1.js"></script>
 <script type="text/javascript" src="../../commons/js/json2.js"></script>
 </head>
 <body>
 	<div>
-		<span>ResponseBody学习</span>
+		<span>HttpEntity学习</span>
 	</div>
 	<div>
-		<input type="button" value="ResponseBody第一发" onclick="theFirst()"/>
+		<input type="button" value="HttpEntity第一发" onclick="theFirst()"/>
 		<span id="theFirstSpan"></span>
 	</div>
 </body>
@@ -20,19 +20,19 @@
 		function theFirst(){
 			$.ajax({
 				type : 'POST',
-				url : '/guava/responseBodyExample/helloWorld',
+				url : '/guava/httpEntityExample/handle',
 				contentType : 'application/json; charset=UTF-8',
 				dataType : 'json',
 				cache : false,
 				data : JSON.stringify(human),// 需要导入json2.js
 				context : $("#theFirstSpan"),
 				statusCode : {
-					404 : function(){
-						$(this).html("ResponseBody第yi发404啦...........");
+					200 : function(){
+						$(this).html("HttpEntity第yi发成功啦...........");
 					}
 				},
 				success : function(data, textStatus, jqXHR){
-					alert(data.name + "--" + data.hobby);
+					debugger;
 				} 
 			});
 		}
